# docchat-fast

./: .dockerignore  .env.example  .env.prod.example  Dockerfile  LICENSE  README.md  api_client.py  api_test.py  config.py  deploy.sh  dochat.docx  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  docker-requirements.txt  document_1  entrypoint.sh  init_db.py  main.py  models.py  nginx.conf  pyproject.toml  run.sh  utils.py
api/v1/: auth.py  documents.py  users.py
app/: __init__.py
app/api/: dependencies.py
app/api/v1/: __init__.py
app/core/: config.py  security.py
app/crud/: base.py  crud_document.py  crud_document_access.py  crud_group.py  crud_token.py  crud_user.py
app/db/: base.py  session.py
app/models/: document.py  group.py  token.py  user.py
app/schemas/: document.py  env.py  group.py  token.py  user.py
app/services/: auth.py  document.py  email.py  minio.py
app/static/: openapi_barier.json  swagger.json
attached_assets/: Pasted-1--1745689940664.txt
doc_decstop/: SettingsDialog.py  main.py
doc_decstop/widgets/: dashboard.py  login.py
last_ui/templates/: base.html  dashboard.html  login.html  register.html
last_ui/templates/admin/: add_group.html  create_user.html  edit_group.html  edit_user.html  group_dashboard.html  users_dashboard.html
last_ui/templates/documents/: send_document.html  view_document.html
migrations/: env.py
tests/: New Collection.postman_collection.json
utils/: app_styles.py
widgets/: dashboard.py  document_send.py  document_view.py  login.py  users.py
(+5 files in other folders)
